# geny-harness

./: .gitignore  Cargo.toml  EXECUTOR_HARNESS_COMPARISON.md  README.md  pyproject.toml
crates/geny-harness-core/: Cargo.toml
crates/geny-harness-core/src/: lib.rs
crates/geny-harness-core/src/core/: artifact.rs  builder.rs  config.rs  errors.rs  mod.rs  pipeline.rs  presets.rs  result.rs  stage.rs  state.rs
crates/geny-harness-core/src/events/: bus.rs  mod.rs  types.rs
crates/geny-harness-core/src/session/: freshness.rs  manager.rs  mod.rs  session.rs
crates/geny-harness-core/src/stages/: mod.rs
crates/geny-harness-core/src/stages/s01_input/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s01_input/artifact/: mod.rs
crates/geny-harness-core/src/stages/s01_input/artifact/default/: mod.rs  normalizer.rs  validator.rs
crates/geny-harness-core/src/stages/s02_context/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s02_context/artifact/: mod.rs
crates/geny-harness-core/src/stages/s03_system/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s03_system/artifact/: mod.rs
crates/geny-harness-core/src/stages/s04_guard/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s04_guard/artifact/: mod.rs
crates/geny-harness-core/src/stages/s05_cache/: interface.rs  mod.rs  stage.rs
crates/geny-harness-core/src/stages/s05_cache/artifact/: mod.rs
crates/geny-harness-core/src/stages/s06_api/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s06_api/artifact/: mod.rs
crates/geny-harness-core/src/stages/s07_token/: interface.rs  mod.rs  stage.rs
crates/geny-harness-core/src/stages/s07_token/artifact/: mod.rs
crates/geny-harness-core/src/stages/s08_think/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s08_think/artifact/: mod.rs
crates/geny-harness-core/src/stages/s09_parse/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s09_parse/artifact/: mod.rs
crates/geny-harness-core/src/stages/s10_tool/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s10_tool/artifact/: mod.rs
crates/geny-harness-core/src/stages/s11_agent/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s11_agent/artifact/: mod.rs
crates/geny-harness-core/src/stages/s12_evaluate/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s12_evaluate/artifact/: mod.rs
crates/geny-harness-core/src/stages/s13_loop/: interface.rs  mod.rs  stage.rs
crates/geny-harness-core/src/stages/s13_loop/artifact/: mod.rs
crates/geny-harness-core/src/stages/s14_emit/: interface.rs  mod.rs  stage.rs  types.rs
crates/geny-harness-core/src/stages/s14_emit/artifact/: mod.rs
crates/geny-harness-core/src/stages/s15_memory/: interface.rs  mod.rs  stage.rs
crates/geny-harness-core/src/stages/s15_memory/artifact/: mod.rs
crates/geny-harness-core/src/stages/s16_yield/: interface.rs  mod.rs  stage.rs
crates/geny-harness-core/src/stages/s16_yield/artifact/: mod.rs
crates/geny-harness-core/src/tools/: base.rs  mod.rs  registry.rs
crates/geny-harness-core/src/tools/mcp/: adapter.rs  manager.rs  mod.rs
crates/geny-harness-py/: Cargo.toml
crates/geny-harness-py/src/: lib.rs
(+77 files in other folders)
