[workspace]
members = ["crates/geny-harness-core", "crates/geny-harness-py"]
resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2021"
license = "MIT"
authors = ["CocoRoF <cocorof@users.noreply.github.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
async-trait = "0.1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
regex = "1"
