[package]
name = "geny-harness-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core Rust library for geny-harness — 16-stage dual-abstraction agent pipeline"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
